--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,9 @@ python = "^3.6, ^3.12"
 feedparser = "^6.0.8"  
 beautifulsoup4 = "^4.11.1"  
 dateparser = "^1.1.1"  
-requests = "^2.28.1"  
+requests = "^2.28.1"
+selenium = "^4.15.0"
+webdriver-manager = "^4.0.0"  
 
 
 [tool.poetry.dev-dependencies]
