--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,8 @@ requests = "^2.28.1"
 selenium = "^4.15.0"
 webdriver-manager = "^4.0.0"
 python-dotenv = "^1.0.0"
-scikit-learn = "^1.3.0"  
+scikit-learn = "^1.3.0"
+supabase = "^2.0.0"  
 
 
 [tool.poetry.dev-dependencies]
