--- a/.github/workflows/daily-news-aggregation.yml
+++ b/.github/workflows/daily-news-aggregation.yml
@@ -34,7 +34,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install poetry
         poetry config virtualenvs.create false
-        poetry install --no-dev
+        poetry install --only main
         
     - name: Download spaCy model
       run: |
