--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ keywords = ["News", "RSS", "Scraping", "Data Mining"]
 
 
 [tool.poetry.dependencies]
-python = "^3.6, ^3.12"
+python = "^3.11"
 feedparser = "^6.0.8"  
 beautifulsoup4 = "^4.11.1"  
 dateparser = "^1.1.1"  
@@ -22,7 +22,7 @@ scikit-learn = "^1.3.0"
 supabase = "^2.0.0"  
 
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 
 [build-system]
 requires = ["poetry>=0.12"]
