--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ selenium = "^4.15.0"
 webdriver-manager = "^4.0.0"
 python-dotenv = "^1.0.0"
 scikit-learn = "^1.3.0"
+spacy = "^3.7.0"
 supabase = "^2.0.0"  
 
 
