--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-feedparser>=5.2.1,<6.0.0
+feedparser>=6.0.8
 beautifulsoup4>=4.11.1
 dateparser>=1.1.1
 requests>=2.28.1
 selenium>=4.15.0
 webdriver-manager>=4.0.0
 python-dotenv>=1.0.0
-scikit-learn>=1.3.0
-spacy>=3.7.0
+numpy<2.0.0
+scikit-learn<1.3.0
+spacy>=3.4.0,<3.7.0
 supabase>=2.0.0
