--- a/.github/workflows/daily-news-aggregation.yml
+++ b/.github/workflows/daily-news-aggregation.yml
@@ -34,17 +34,14 @@ jobs:
       uses: actions/cache@v4
       with:
         path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('**/pyproject.toml') }}
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
         restore-keys: |
           ${{ runner.os }}-pip-
           
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install poetry
-        poetry config virtualenvs.create false
-        poetry lock
-        poetry install --only main
+        pip install -r requirements.txt
         
     - name: Download spaCy model
       run: |
