--- a/.github/workflows/daily-news-aggregation.yml
+++ b/.github/workflows/daily-news-aggregation.yml
@@ -46,6 +46,10 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         
+    - name: Install Playwright browsers
+      run: |
+        playwright install chromium
+        
     - name: Download spaCy model
       run: |
         python -m spacy download en_core_web_sm
