feat: Implement full automated news pipeline with AI enhancement and Supabase integration
- Added a new method to run AI enhancement using a Node.js script.
- Updated save_combined_data to prevent raw data upload to Supabase.
- Introduced save_enhanced_to_supabase to handle only AI-enhanced articles.
- Enhanced user interaction for choosing execution methods, including a full automation option.
- Created package.json and package-lock.json for Node.js dependencies related to AI enhancement.
- Improved error handling and user feedback throughout the pipeline process.

--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,39 @@
 # Get your free API key from: https://newsapi.org/register
 NEWSAPI_KEY=your_newsapi_key_here
 
+# Gemini AI Configuration (for Node.js enhancement script)
+# Get your free API key from: https://aistudio.google.com/app/apikey
+GEMINI_API_KEY=your_gemini_api_key_here
+
+# Secondary Gemini API Key (optional - for increased rate limits)
+# Having multiple keys allows for better throughput and redundancy
+GEMINI_API_KEY_2=your_second_gemini_api_key_here
+
+# Third Gemini API Key (optional - for maximum performance)
+# Triple-key setup provides 3x rate limit and superior fault tolerance
+GEMINI_API_KEY_3=your_third_gemini_api_key_here
+
+# Fourth Gemini API Key (optional - for enterprise-level performance)
+# Quad-key setup provides 4x rate limit and enterprise-grade redundancy
+GEMINI_API_KEY_4=your_fourth_gemini_api_key_here
+
+# Additional API keys can be added as GEMINI_API_KEY_5, GEMINI_API_KEY_6, etc.
+
 # Optional: Set minimum description length for content extraction
 MIN_DESCRIPTION_LENGTH=100
 
 # Optional: Deduplication thresholds (0.0 to 1.0)
 TITLE_SIMILARITY_THRESHOLD=0.85
 URL_SIMILARITY_THRESHOLD=0.90
+
+# AI Enhancement Settings (for Node.js script)
+# Set to 999999 for unlimited processing (process ALL articles)
+# Or set a specific number to limit processing (e.g., 50, 100, 200)
+MAX_ARTICLES_TO_ENHANCE=999999
+
+# Gemini Model Rate Limits (Requests Per Minute)
+# Adjust these based on your API tier and quotas
+GEMINI_2_0_FLASH_RPM=15          # Gemini 2.0 Flash rate limit
+GEMINI_2_0_FLASH_LITE_RPM=30     # Gemini 2.0 Flash-Lite rate limit  
+GEMINI_1_5_FLASH_RPM=15          # Gemini 1.5 Flash rate limit
+DEFAULT_RPM=10                   # Default conservative rate limit
