feat: Enhance NewsAPI integration with Indian-focused source categorization and credibility ratings

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,10 @@
 # NewsAPI Configuration
 # Get your free API key from: https://newsapi.org/register
-NEWSAPI_KEY=your_newsapi_key_here
+# Multiple keys supported for redundancy and higher rate limits
+NEWSAPI_KEY_PRIMARY=your_primary_newsapi_key_here
+NEWSAPI_KEY_SECONDARY=your_secondary_newsapi_key_here
+NEWSAPI_KEY_TERTIARY=your_tertiary_newsapi_key_here
+NEWSAPI_KEY=your_fallback_newsapi_key_here
 
 # Gemini AI Configuration (for Node.js enhancement script)
 # Get your free API key from: https://aistudio.google.com/app/apikey
@@ -19,6 +23,11 @@ GEMINI_API_KEY_3=your_third_gemini_api_key_here
 GEMINI_API_KEY_4=your_fourth_gemini_api_key_here
 
 # Additional API keys can be added as GEMINI_API_KEY_5, GEMINI_API_KEY_6, etc.
+
+# Supabase Database Configuration
+# Get your credentials from: https://supabase.com/dashboard
+SUPABASE_URL=https://your-project.supabase.co
+SUPABASE_KEY=your_service_role_key_here
 
 # Optional: Set minimum description length for content extraction
 MIN_DESCRIPTION_LENGTH=100
