fix: Resolve dependency conflicts and enhance import handling for robustness
- Updated requirements.txt to specify compatible versions for core and scientific computing dependencies.
- Improved installation instructions in DEV_GUIDE.md to reflect fixed dependency versions.
- Enhanced import handling in news fetchers to support multiple fallback strategies for GitHub Actions compatibility, ensuring critical components are loaded correctly.
- Added warnings for missing dependencies to prevent silent failures in duplicate prevention mechanisms.

--- a/.github/workflows/daily-news-aggregation.yml
+++ b/.github/workflows/daily-news-aggregation.yml
@@ -84,12 +84,21 @@ jobs:
         PYTHONPATH: ${{ github.workspace }}
       timeout-minutes: 45
         
+    - name: Commit duplicate prevention data
+      run: |
+        git config --local user.email "action@github.com"
+        git config --local user.name "GitHub Action"
+        git add data/compact_hashes.txt data/rss_history/ data/newsapi_history/ || true
+        git commit -m "Update duplicate prevention data [skip ci]" || exit 0
+        git push || exit 0
+        
     - name: Upload aggregated data as artifacts
       uses: actions/upload-artifact@v4
       with:
         name: news-data-${{ github.run_number }}
         path: |
           data/*.json
+          data/compact_hashes.txt
         retention-days: 7
         if-no-files-found: warn
         
