--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,27 @@
+# Core dependencies
 feedparser>=6.0.8
 beautifulsoup4>=4.11.1
 dateparser>=1.1.1
 requests>=2.28.1
-playwright>=1.40.0
 python-dotenv>=1.0.0
-numpy<2.0.0
-scikit-learn>=1.0.0,<1.3.0
-spacy>=3.4.0,<3.7.0
+
+# Scientific computing stack (compatible versions for sklearn)
+# Using specific versions that work well together
+numpy>=1.21.0,<2.0.0
+scipy>=1.9.0,<1.12.0
+scikit-learn>=1.3.0,<1.4.0
+
+# NLP and text processing
+spacy>=3.4.0,<3.8.0
+
+# Web automation with system dependencies
+playwright>=1.40.0
+
+# Database
 supabase>=2.0.0
+
+# Additional dependencies for robust operation
+typing-extensions>=4.0.0
+
+# Mac-specific system dependencies for Playwright
+# Note: Run 'playwright install' after pip install to get browser binaries
