--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,9 @@
 # NewsAPI Configuration
 # Get your free API key from: https://newsapi.org/register
-# Multiple keys supported for redundancy and higher rate limits
+# Multiple keys supported for redundancy and higher rate limits (300 requests/day total)
 NEWSAPI_KEY_PRIMARY=your_primary_newsapi_key_here
 NEWSAPI_KEY_SECONDARY=your_secondary_newsapi_key_here
 NEWSAPI_KEY_TERTIARY=your_tertiary_newsapi_key_here
-NEWSAPI_KEY=your_fallback_newsapi_key_here
 
 # Gemini AI Configuration (for Node.js enhancement script)
 # Get your free API key from: https://aistudio.google.com/app/apikey
